correcting size and align of visual impaired box

--- a/static/ipl/css/spec-version.css
+++ b/static/ipl/css/spec-version.css
@@ -7,17 +7,24 @@
   width: 50%;
   text-align: center;
   height: 80px;
+  /* top: 40px; */
   line-height: 0px;
 }
 
 .box__color ul, .box__font ul {
   position: relative;
-  left: 20px;
-  display: flex;
+  /* left: 20px; */
+  /* display: flex; */
+  /* padding: 0px; */
+	/* line-height: 1.375em; */
+	font-weight: 400;
 }
 
 .box__color h4, .box__font h4 {
   text-align: center;
+	line-height: 1.375em;
+  margin: 5px;
+  /* flex: auto; */
 }
 
 .before {
@@ -27,10 +34,11 @@
 }
 
 .recolor, .resize {
+  /* flex: auto; */
   position: relative;
   display: inline-block;
   height: 30px;
-  width: 30px;
+  width: 25px;
   border: 1px solid black;
   cursor: pointer;
   list-style-type: none;
@@ -59,11 +67,27 @@ span.text {
 }
 
 .button-disappear {
+  height: 3em;
+	line-height: 3em;
   text-align: center;
+}
+
+.visual-impaired-icon {
+  display: table-cell; vertical-align: middle; 
+}
+
+.button-disappear button {
+  font-size: 30px;
+  display: table-cell; vertical-align: middle; 
 }
 
 .button-for-appear-box-center {
   text-align: center;
+}
+
+.button-for-appear-box-center a button {
+  font-size: 30px;
+  margin: 5px;
 }
 
 .prev-box-spec {
